--- a/TP1/GUI/ventanaGenerarNumeros.ui
+++ b/TP1/GUI/ventanaGenerarNumeros.ui
@@ -20,11 +20,11 @@
       <x>10</x>
       <y>150</y>
       <width>351</width>
-      <height>411</height>
+      <height>391</height>
      </rect>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>550</x>
@@ -85,7 +85,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>560</x>
@@ -121,7 +121,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
